--- a/users-backend-coverage/d_e634d7a1dd90e049_users_py.html
+++ b/users-backend-coverage/d_e634d7a1dd90e049_users_py.html
@@ -65,7 +65,7 @@
             <a id="nextFileLink" class="nav" href="d_f35dcf436292fe87___init___py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-15 03:55 +0000
+            created at 2023-11-21 00:26 +0000
         </p>
         <aside class="hidden">
             <button type="button" class="button_next_chunk" data-shortcut="j"/>
@@ -80,7 +80,7 @@
     </div>
 </header>
 <main id="source">
-    <p class="run"><span class="n"><a id="t1" href="#t1">1</a></span><span class="t"><span class="key">from</span> <span class="nam">sqlalchemy</span> <span class="key">import</span> <span class="nam">Column</span><span class="op">,</span> <span class="nam">Integer</span><span class="op">,</span> <span class="nam">String</span><span class="op">,</span> <span class="nam">DateTime</span><span class="op">,</span> <span class="nam">Table</span><span class="op">,</span> <span class="nam">ForeignKey</span><span class="op">,</span> <span class="nam">Boolean</span>&nbsp;</span><span class="r"></span></p>
+    <p class="run"><span class="n"><a id="t1" href="#t1">1</a></span><span class="t"><span class="key">from</span> <span class="nam">sqlalchemy</span> <span class="key">import</span> <span class="nam">Column</span><span class="op">,</span> <span class="nam">Integer</span><span class="op">,</span> <span class="nam">String</span><span class="op">,</span> <span class="nam">DateTime</span><span class="op">,</span> <span class="nam">Table</span><span class="op">,</span> <span class="nam">ForeignKey</span>&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t2" href="#t2">2</a></span><span class="t"><span class="key">from</span> <span class="nam">sqlalchemy</span><span class="op">.</span><span class="nam">orm</span> <span class="key">import</span> <span class="nam">relationship</span>&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t3" href="#t3">3</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t4" href="#t4">4</a></span><span class="t"><span class="key">from</span> <span class="nam">models</span><span class="op">.</span><span class="nam">base</span> <span class="key">import</span> <span class="nam">DBBase</span>&nbsp;</span><span class="r"></span></p>
@@ -141,7 +141,7 @@
             <a id="nextFileLink" class="nav" href="d_f35dcf436292fe87___init___py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-15 03:55 +0000
+            created at 2023-11-21 00:26 +0000
         </p>
     </div>
 </footer>
