--- a/snaps-backend-coverage/index.html
+++ b/snaps-backend-coverage/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Snaps Backend Code Coverage:
-            <span class="pc_cov">99%</span>
+            <span class="pc_cov">88%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-23 03:22 +0000
+            created at 2023-12-07 17:15 +0000
         </p>
     </div>
 </header>
@@ -62,6 +62,62 @@
         </thead>
         <tbody>
             <tr class="file">
+                <td class="name left"><a href="d_e634d7a1dd90e049___init___py.html">models/__init__.py</a></td>
+                <td>3</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="3 3">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_e634d7a1dd90e049_snaps_py.html">models/snaps.py</a></td>
+                <td>14</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="14 14">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_e634d7a1dd90e049_snapshares_py.html">models/snapshares.py</a></td>
+                <td>5</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="5 5">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_e634d7a1dd90e049_statistics_py.html">models/statistics.py</a></td>
+                <td>12</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="12 12">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_f35dcf436292fe87___init___py.html">repositories/__init__.py</a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_f35dcf436292fe87_snap_repository_py.html">repositories/snap_repository.py</a></td>
+                <td>173</td>
+                <td>45</td>
+                <td>0</td>
+                <td class="right" data-ratio="128 173">74%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_f35dcf436292fe87_snapshare_repository_py.html">repositories/snapshare_repository.py</a></td>
+                <td>70</td>
+                <td>11</td>
+                <td>0</td>
+                <td class="right" data-ratio="59 70">84%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_f35dcf436292fe87_utils_py.html">repositories/utils.py</a></td>
+                <td>26</td>
+                <td>16</td>
+                <td>0</td>
+                <td class="right" data-ratio="10 26">38%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77___init___py.html">service/__init__.py</a></td>
                 <td>0</td>
                 <td>0</td>
@@ -70,10 +126,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_data_structs_py.html">service/data_structs.py</a></td>
-                <td>61</td>
+                <td>101</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="61 61">100%</td>
+                <td class="right" data-ratio="101 101">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_63e5b5a4137cfa77_datadog_publisher_py.html">service/datadog_publisher.py</a></td>
@@ -88,6 +144,13 @@
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="6 6">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="snapsdb_py.html">snapsdb.py</a></td>
+                <td>2</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="2 2">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="d_a44f0ac069e85531___init___py.html">tests/__init__.py</a></td>
@@ -110,14 +173,28 @@
                 <td>0</td>
                 <td class="right" data-ratio="27 28">96%</td>
             </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_snaps_repository_py.html">tests/test_snaps_repository.py</a></td>
+                <td>80</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="79 80">99%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_a44f0ac069e85531_test_snapshares_repository_py.html">tests/test_snapshares_repository.py</a></td>
+                <td>53</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="52 53">98%</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>131</td>
-                <td>1</td>
+                <td>609</td>
+                <td>75</td>
                 <td>0</td>
-                <td class="right" data-ratio="130 131">99%</td>
+                <td class="right" data-ratio="534 609">88%</td>
             </tr>
         </tfoot>
     </table>
@@ -129,12 +206,12 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.3.2">coverage.py v7.3.2</a>,
-            created at 2023-11-23 03:22 +0000
+            created at 2023-12-07 17:15 +0000
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="d_a44f0ac069e85531_test_jwt_handler_py.html"/>
-        <a id="nextFileLink" class="nav" href="d_63e5b5a4137cfa77___init___py.html"/>
+        <a id="prevFileLink" class="nav" href="d_a44f0ac069e85531_test_snapshares_repository_py.html"/>
+        <a id="nextFileLink" class="nav" href="d_e634d7a1dd90e049___init___py.html"/>
         <button type="button" class="button_prev_file" data-shortcut="["/>
         <button type="button" class="button_next_file" data-shortcut="]"/>
         <button type="button" class="button_show_hide_help" data-shortcut="?"/>
